@@ -1,14 +1,18 @@
 package com.sparta.orderservice.manage.application.service;
 
+import com.sparta.orderservice.manage.domain.repository.ManageOrderMenuRepository;
 import com.sparta.orderservice.manage.domain.repository.ManageOrderRepository;
 import com.sparta.orderservice.manage.domain.repository.ManageStoreRepository;
 import com.sparta.orderservice.manage.domain.repository.ManageUserRepository;
+import com.sparta.orderservice.manage.presentation.advice.exception.ManageException;
 import com.sparta.orderservice.manage.presentation.dto.response.*;
 import com.sparta.orderservice.order.domain.entity.Order;
+import com.sparta.orderservice.order.domain.entity.OrderMenu;
 import com.sparta.orderservice.order.domain.entity.OrderStatus;
 import com.sparta.orderservice.store.domain.entity.Store;
 import com.sparta.orderservice.user.domain.entity.User;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.DataAccessException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -22,35 +26,54 @@ import jakarta.persistence.criteria.Predicate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class ManageServiceV1 {
 
     private final ManageUserRepository userRepository;
     private final ManageStoreRepository storeRepository;
     private final ManageOrderRepository orderRepository;
+    private final ManageOrderMenuRepository orderMenuRepository;
 
+    private static final Set<String> ALLOWED_SORT_FIELDS =
+            Set.of("orderId", "createdAt", "updatedAt", "totalPrice", "orderStatus", "id", "name", "email");
 
     private Pageable toPageable(int page, int pageSize, String sortBy, boolean isAsc) {
-        int pageIndex = Math.max(page - 1, 0);
-        int size = Math.min(Math.max(pageSize, 1), 100);
+        if (page < 1 || pageSize < 1) {
+            throw ManageException.invalidInput("page와 pageSize는 1 이상이어야 합니다.");
+        }
+        // 정렬 필드 검증(옵션)
+        if (StringUtils.hasText(sortBy) && !ALLOWED_SORT_FIELDS.contains(sortBy)) {
+            throw ManageException.invalidSortField(sortBy);
+        }
+
+        int pageIndex = page - 1;
+        int size = Math.min(pageSize, 100);
         Sort sort = Sort.by(isAsc ? Sort.Direction.ASC : Sort.Direction.DESC, sortBy);
         return PageRequest.of(pageIndex, size, sort);
     }
 
     /* 회원 조회 */
+    @Transactional(readOnly = true)
     public List<ResUserDtoV1> getUserList(String search, int page, int pageSize, String sortBy, boolean isAsc) {
         Pageable pageable = toPageable(page, pageSize, sortBy, isAsc);
 
-        Page<User> result = StringUtils.hasText(search)
-                ? userRepository.findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase(search, search, pageable)
-                : userRepository.findAll(pageable);
+        try {
+            Page<User> result = StringUtils.hasText(search)
+                    ? userRepository.findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase(search, search, pageable)
+                    : userRepository.findAll(pageable);
 
-        return result.map(this::toResUserDto).getContent();
+            if (result.isEmpty()) throw ManageException.notFound("회원 목록");
+
+            return result.map(this::toResUserDto).getContent();
+
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
     }
 
     private ResUserDtoV1 toResUserDto(User user) {
@@ -64,69 +87,75 @@ public class ManageServiceV1 {
     }
 
     /* 회원 상세 조회 */
+    @Transactional(readOnly = true)
     public ResUserDetailDtoV1 getUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다. userId=" + userId));
+        try {
+            User user = userRepository.findById(userId)
+                    .orElseThrow(() -> ManageException.notFound("사용자 userId=" + userId));
 
-        List<Order> orders = orderRepository.findByUser_UserId(userId);
+            List<Order> orders = orderRepository.findByUser_UserId(userId);
+            List<orderDtoV1> orderList = orders.stream()
+                    .map(order -> new orderDtoV1(order.getOrderId().toString()))
+                    .toList();
 
-        List<orderDtoV1> orderList = orders.stream()
-                .map(order -> new orderDtoV1(
-                        order.getOrderId().toString()
-                ))
-                .toList();
-
-        return ResUserDetailDtoV1.builder()
-                .userId(String.valueOf(user.getUserId()))
-                .name(user.getName())
-                .email(user.getEmail())
-                .address(user.getAddress())
-                .status(user.isActive() ? "활성화" : "비활성화")
-                .orderMenuList(orderList)
-                .createdAt(user.getCreatedAt())
-                .updateAt(user.getUpdatedAt())
-                .createBy(String.valueOf(user.getCreatedBy()))
-                .updateBy(user.getUpdatedBy() != null ? String.valueOf(user.getUpdatedBy()) : null)
-                .build();
+            return ResUserDetailDtoV1.builder()
+                    .userId(String.valueOf(user.getUserId()))
+                    .name(user.getName())
+                    .email(user.getEmail())
+                    .address(user.getAddress())
+                    .status(user.isActive() ? "활성화" : "비활성화")
+                    .orderMenuList(orderList)
+                    .createdAt(user.getCreatedAt())
+                    .updateAt(user.getUpdatedAt())
+                    .createBy(String.valueOf(user.getCreatedBy()))
+                    .updateBy(user.getUpdatedBy() != null ? String.valueOf(user.getUpdatedBy()) : null)
+                    .build();
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
     }
 
     /* 회원 비활성화 */
     @Transactional
     public void userDeactive(Long adminId, Long userId) {
-        int updated = userRepository.deactivate(
-                userId,
-                LocalDateTime.now(),
-                adminId
-        );
-        if (updated == 0) {
-            throw new IllegalArgumentException("해당 사용자가 존재하지 않습니다. userId=" + userId);
+        if (adminId == null) throw ManageException.unauthorized("관리자 인증 정보가 없습니다.");
+        try {
+            int updated = userRepository.deactivate(userId, LocalDateTime.now(), adminId);
+            if (updated == 0) throw ManageException.notFound("사용자 userId=" + userId);
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
         }
     }
 
     /* 회원 활성화 */
     @Transactional
     public void userActive(Long adminId, Long userId) {
-        int updated = userRepository.activate(
-                userId,
-                LocalDateTime.now(),
-                adminId
-        );
-        if (updated == 0) {
-            throw new IllegalArgumentException("해당 사용자가 존재하지 않습니다. userId=" + userId);
+        if (adminId == null) throw ManageException.unauthorized("관리자 인증 정보가 없습니다.");
+        try {
+            int updated = userRepository.activate(userId, LocalDateTime.now(), adminId);
+            if (updated == 0) throw ManageException.notFound("사용자 userId=" + userId);
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
         }
     }
 
     /* 가게 조회 */
+    @Transactional(readOnly = true)
     public List<ResStoreDtoV1> getStoreList(String search, int page, int pageSize, String sortBy, boolean isAsc) {
         Pageable pageable = toPageable(page, pageSize, sortBy, isAsc);
+        try {
+            Page<Store> result = StringUtils.hasText(search)
+                    ? storeRepository.findByNameContainingIgnoreCase(search, pageable)
+                    : storeRepository.findAll(pageable);
 
-        Page<Store> result = StringUtils.hasText(search)
-                ? storeRepository.findByNameContainingIgnoreCase(search, pageable)
-                : storeRepository.findAll(pageable);
+            if (result.isEmpty()) {
+                throw ManageException.notFound("가게 목록");
+            }
 
-        return result.stream()
-                .map(this::toResStoreDto)
-                .collect(Collectors.toList());
+            return result.stream().map(this::toResStoreDto).toList();
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
     }
 
     private ResStoreDtoV1 toResStoreDto(Store store) {
@@ -140,11 +169,16 @@ public class ManageServiceV1 {
     }
 
     /* 가게 상세 조회 */
+    @Transactional(readOnly = true)
     public ResStoreDetailDtoV1 getStore(UUID storeId) {
-        Store store = storeRepository.findByStoreId(storeId)
-                .orElseThrow(() -> new IllegalArgumentException("가게를 찾을 수 없습니다. storeId=" + storeId));
+        try {
+            Store store = storeRepository.findByStoreId(storeId)
+                    .orElseThrow(() -> ManageException.notFound("가게 storeId=" + storeId));
 
-        return toResStoreDetailDto(store);
+            return toResStoreDetailDto(store);
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
     }
 
     private ResStoreDetailDtoV1 toResStoreDetailDto(Store store) {
@@ -168,42 +202,41 @@ public class ManageServiceV1 {
     /* 가게 비활성화 */
     @Transactional
     public void storeDeactive(Long adminId, UUID storeId) {
-        int updated = storeRepository.deactivateStore(
-                storeId,
-                LocalDateTime.now(),
-                adminId
-        );
-
-        if (updated == 0) {
-            throw new IllegalArgumentException("가게를 찾을 수 없습니다. storeId=" + storeId);
+        if (adminId == null) throw ManageException.unauthorized("관리자 인증 정보가 없습니다.");
+        try {
+            int updated = storeRepository.deactivateStore(storeId, LocalDateTime.now(), adminId);
+            if (updated == 0) throw ManageException.notFound("가게 storeId=" + storeId);
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
         }
     }
 
     /* 가게 활성화 */
     @Transactional
     public void storeActive(Long adminId, UUID storeId) {
-        int updated = storeRepository.activateStore(
-                storeId,
-                LocalDateTime.now(),
-                adminId
-        );
-
-        if (updated == 0) {
-            throw new IllegalArgumentException("가게를 찾을 수 없습니다. storeId=" + storeId);
+        if (adminId == null) throw ManageException.unauthorized("관리자 인증 정보가 없습니다.");
+        try {
+            int updated = storeRepository.activateStore(storeId, LocalDateTime.now(), adminId);
+            if (updated == 0) throw ManageException.notFound("가게 storeId=" + storeId);
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
         }
     }
 
     /* 주문 리스트 조회 */
+    @Transactional(readOnly = true)
     public List<ResOrderDtoV1> getOrderList(String search, int page, int pageSize, String sortBy, boolean isAsc) {
         Pageable pageable = toPageable(page, pageSize, sortBy, isAsc);
-
-        Specification<Order> spec = buildOrderSearchSpec(search);
-
-        Page<Order> result = orderRepository.findAll(spec, pageable);
-
-        return result.stream()
-                .map(this::toResOrderDto) // 엔티티 -> 목록 DTO
-                .collect(Collectors.toList());
+        try {
+            Specification<Order> spec = buildOrderSearchSpec(search);
+            Page<Order> result = orderRepository.findAll(spec, pageable);
+            if (result.isEmpty()) {
+                throw ManageException.notFound("주문 목록");
+            }
+            return result.stream().map(this::toResOrderDto).toList();
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
     }
 
     private Specification<Order> buildOrderSearchSpec(String search) {
@@ -238,23 +271,41 @@ public class ManageServiceV1 {
     }
 
     /* 주문 상세 조회 */
+    @Transactional(readOnly = true)
     public ResOrderDetailDtoV1 getOrder(UUID orderId) {
-        ResOrderDetailDtoV1 orderDetail = ResOrderDetailDtoV1.builder()
-                .orderId(orderId.toString())
-                .customerId("123")
-                .storeId("S001")
-                .oderMessage("문 앞에 두고 가주세요")
-                .orderMenuList(List.of(
-                        new orderMenuDtoV1("1001", "김치찌개", 2, 18000),
-                        new orderMenuDtoV1("1002", "된장찌개", 1, 8000)
-                ))
-                .totalPrice(26000)
-                .orderStatus("주문완료")
-                .createdAt(LocalDateTime.now().minusDays(2))
-                .deleteAt(null)
-                .createBy("user1")
-                .deleteBy(null)
+        try {
+            Order order = orderRepository.findByOrderId(orderId)
+                    .orElseThrow(() -> ManageException.notFound("주문 orderId=" + orderId));
+
+            // 주의: orderMenus LAZY라면 레포에 @EntityGraph로 미리 패치하는 것을 권장합니다.
+            List<orderMenuDtoV1> items = order.getOrderMenus().stream()
+                    .map(this::toOrderMenuDto)
+                    .toList();
+
+            return ResOrderDetailDtoV1.builder()
+                    .orderId(order.getOrderId().toString())
+                    .customerId(order.getUser() != null ? String.valueOf(order.getUser().getUserId()) : null)
+                    .storeId(order.getStore() != null ? order.getStore().getStoreId().toString() : null)
+                    .oderMessage(order.getOrderMessage())
+                    .orderMenuList(items)
+                    .totalPrice(order.getTotalPrice()) // 주문 엔티티에 저장된 금액 사용
+                    .orderStatus(order.getOrderStatus().name())
+                    .createdAt(order.getCreatedAt())
+                    .deleteAt(order.getDeletedAt())
+                    .createBy(order.getCreatedBy() != null ? String.valueOf(order.getCreatedBy().getUserId()) : null)
+                    .deleteBy(order.getDeletedBy() != null ? String.valueOf(order.getDeletedBy()) : null)
+                    .build();
+        } catch (DataAccessException ex) {
+            throw ManageException.dataAccess(ex);
+        }
+    }
+
+    private orderMenuDtoV1 toOrderMenuDto(OrderMenu om) {
+        return orderMenuDtoV1.builder()
+                .menuId(om.getMenu() != null ? om.getMenu().getId().toString() : null)
+                .menu(om.getMenu() != null ? om.getMenu().getName() : null)
+                .amount(om.getOrderMenuQty())
+                .price(om.getMenu() != null ? om.getMenu().getPrice() : 0)
                 .build();
-        return orderDetail;
     }
 }
